# ticket-booking

./: .gitignore  LICENSE  pyproject.toml
ticket_booking/: requirements.txt  vercel.json
ticket_booking/cart/: cart.py  urls.py  views.py
ticket_booking/cart/templates/: cart.html
ticket_booking/checkout/: admin.py  models.py  urls.py  views.py
ticket_booking/checkout/migrations/: 0001_initial.py  0002_rename_order_ticket_user_ticket_order_number.py  0003_rename_user_ticket_customer.py  0004_rename_customer_ticket_order_id.py  0005_rename_order_id_ticket_order.py  0006_alter_ticket_event_name_alter_ticket_ticket_type_and_more.py
ticket_booking/checkout/templates/: payment_cancelled.html  payment_successful.html
ticket_booking/static/css/: styles.css
ticket_booking/ticket_app/: apps.py  forms.py  models.py  urls.py  views.py
ticket_booking/ticket_app/migrations/: 0001_initial.py  0002_alter_event_image.py  0003_alter_event_image.py  0004_event_regular_stripe_id_event_vip_stripe_id.py
ticket_booking/ticket_app/templates/: _navbar.html  base.html  event.html  index.html  mytickets.html
ticket_booking/ticket_app/templates/registration/: login.html  sign_up.html
ticket_booking/ticket_booking/: asgi.py  settings.py  urls.py  wsgi.py
