[tool.poetry]
name = "ticket-booking"
version = "0.1.0"
description = ""
authors = ["tin3ga"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.10"
python-dotenv = "^1.0.1"
django-bootstrap-v5 = "^1.0.11"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
