[tool.poetry]
name = "ticket-booking"
version = "0.1.0"
description = ""
authors = ["tin3ga"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
django-bootstrap-v5 = "^1.0.11"
pillow = "^10.3.0"
django-crispy-forms = "^2.1"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.49"
django-storages = "^1.14.2"
crispy-bootstrap5 = "^2024.2"
stripe = "^8.4.0"
django-allauth = "0.61.0"
django = "4.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
